refactor(backend-worker): rename endpoints
