# backend-worker/src/main/kotlin/org/rucca/snake/worker/api/ExecApi.kt
@@ -1,0 +1,63 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech)
+ * (7.10.0). https://openapi-generator.tech Do not edit the class manually.
+ */
+package org.rucca.snake.worker.api
+
+import io.swagger.v3.oas.annotations.*
+import io.swagger.v3.oas.annotations.enums.*
+import io.swagger.v3.oas.annotations.media.*
+import io.swagger.v3.oas.annotations.responses.*
+import io.swagger.v3.oas.annotations.security.*
+import javax.validation.Valid
+import org.rucca.snake.worker.model.ExecPost200ResponseDTO
+import org.rucca.snake.worker.model.ExecPost400ResponseDTO
+import org.rucca.snake.worker.model.ExecPostRequestDTO
+import org.springframework.http.HttpStatus
+import org.springframework.http.ResponseEntity
+import org.springframework.validation.annotation.Validated
+import org.springframework.web.bind.annotation.*
+
+@RestController
+@Validated
+interface ExecApi {
+
+    @Operation(
+        tags =
+            [
+                "default",
+            ],
+        summary = "Execute code in sandbox",
+        operationId = "execPost",
+        description = """""",
+        responses =
+            [
+                ApiResponse(
+                    responseCode = "200",
+                    description = "Execution successful",
+                    content =
+                        [Content(schema = Schema(implementation = ExecPost200ResponseDTO::class))]
+                ),
+                ApiResponse(
+                    responseCode = "400",
+                    description = "Bad request",
+                    content =
+                        [Content(schema = Schema(implementation = ExecPost400ResponseDTO::class))]
+                )
+            ]
+    )
+    @RequestMapping(
+        method = [RequestMethod.POST],
+        value = ["/exec"],
+        produces = ["application/json"],
+        consumes = ["application/json"]
+    )
+    fun execPost(
+        @Parameter(description = "", required = true)
+        @Valid
+        @RequestBody
+        execPostRequestDTO: ExecPostRequestDTO
+    ): ResponseEntity<ExecPost200ResponseDTO> {
+        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+    }
+}
